# esbuild-py

./: .gitignore  .tool-versions  README.md  esbuild_bindings.go  esbuild_bindings_wasm.go  go.mod  pyproject.toml  setup.py
internal/shared/: api.go
scripts/: build_wasm.sh
src/esbuild_py/: __init__.py  _native_backend.py  _wasm_backend.py
tests/: test_build.py  test_wasm_backend.py
